index img renamed

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <p>Aqui na UnicorNFT pode-se encontrar as mais criativas, sensíveis e encantadoras obras digitais da jovem artista Lara Clari, em suporte digital ou físico.</p>
         <a class="botao" href="/">VER MAIS</a>
       </div>
-      <img src="/img/Casal.ClarissaM.jpg" alt="Casal de Pôneis em Desenho, azul e rosa">
+      <img src="/img/Casal.jpg" alt="Casal de Pôneis em Desenho, azul e rosa">
     </article>
 
     <article class="conteudo" aria-labelledby="label-vantagens">
